--- a/hrjobcontract/scss/civihr/_bootstrap-variables.sass
+++ b/hrjobcontract/scss/civihr/_bootstrap-variables.sass
@@ -20,6 +20,8 @@ $gray-dark:             #4D4D69
 $gray:                  #586277
 $gray-light:            #4D4D69
 $gray-lighter:          #e8eef0
+$crm-black:             #000000
+
 
 $brand-primary:         #0071BD
 $brand-success:         #7dc4a7
@@ -164,8 +166,8 @@ $btn-default-border-hover:       #3D3D54
 $btn-primary-border:             $brand-primary
 
 // $btn-success-color:              #fff
-// $btn-success-bg:                 $brand-success
-// $btn-success-border:             darken($btn-success-bg, 5%)
+$btn-success-bg:                 #44CB7E
+$btn-success-border:             $btn-success-bg
 
 // $btn-info-color:                 #fff
 // $btn-info-bg:                    $brand-info
@@ -180,13 +182,6 @@ $btn-danger-bg:                  #CF3458
 $btn-danger-border:              $btn-danger-bg
 
 // $btn-link-disabled-color:        $gray-light
-
-$brand-primary-dark:             #005A97
-$brand-secondary-dark:           #3D3D54
-$brand-success-dark:             #2C8452
-$brand-info-dark:                #005A97
-$brand-warning-dark:             #9F6A26
-$brand-danger-dark:              #A52946
 
 //== Forms
 //
