--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-day.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-day.html
@@ -36,9 +36,9 @@
   <div>
     <strong>{{day.contactData.leaveRequest['type_id.title']}}</strong>
     <p>
-      From: {{day.contactData.leaveRequest.from_date | date:'dd MMM yyyy'}},
+      From: {{day.dates.from | date:'dd MMM yyyy'}},
       {{day.contactData.leaveRequest['from_date_type.label']}}<br />
-      To: {{day.contactData.leaveRequest.to_date | date:'dd MMM yyyy'}},
+      To: {{day.dates.to | date:'dd MMM yyyy'}},
       {{day.contactData.leaveRequest['to_date_type.label']}}
     </p>
   </div>
@@ -47,8 +47,7 @@
   <div>
     <strong>{{day.contactData.leaveRequest['type_id.title']}}</strong>
     <p>
-      From: {{day.contactData.leaveRequest.from_date | date:'HH:mm'}}<br />
-      To: {{day.contactData.leaveRequest.to_date | date:'HH:mm'}}
+      From: {{day.dates.from | date:'HH:mm'}}
     </p>
   </div>
 </script>
@@ -56,8 +55,8 @@
   <div>
     <strong>{{day.contactData.leaveRequest['type_id.title']}}</strong>
     <p>
-      From: {{day.contactData.leaveRequest.from_date | date:'dd MMM yyyy HH:mm'}}<br />
-      To: {{day.contactData.leaveRequest.to_date | date:'dd MMM yyyy HH:mm'}}
+      From: {{day.dates.from | date:'dd MMM yyyy HH:mm'}}<br />
+      To: {{day.dates.to | date:'dd MMM yyyy HH:mm'}}
     </p>
   </div>
 </script>
